--- a/package.json
+++ b/package.json
@@ -10,10 +10,20 @@
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.19.1",
+    "@expo-google-fonts/source-sans-pro": "^0.2.2",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/stack": "^6.3.12",
     "expo": "~47.0.12",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "^11.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "~4.4.1",
+    "react-native-screens": "~3.18.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
